
SET(EXE_NAME crypteos)
INCLUDE(Utils)

FIND_PACKAGE(cryptopp)
INCLUDE_DIRECTORIES(${CRYPTOPP_INCLUDE_DIR})

FIND_PACKAGE(Boost COMPONENTS program_options)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

FILE(GLOB_RECURSE SRC *.cpp *.h)
ADD_EXECUTABLE(${EXE_NAME} ${SRC})

message( ${CRYPTOPP_LIBRARIES})
message( ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${CRYPTOPP_LIBRARIES})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${Boost_LIBRARIES})

# To make folder in visual.
GROUP_FILES()

###Install
INSTALL(DIRECTORY "./"  
        DESTINATION "include/CryptPasswords" 
        COMPONENT headers 
        FILES_MATCHING PATTERN "*.h"
		PATTERN ".svn" EXCLUDE)

INSTALL( TARGETS ${EXE_NAME} RUNTIME DESTINATION bin COMPONENT applications)

