SET(LIB_NAME gcryptWrapper)
INCLUDE(Utils)

FIND_PACKAGE(Libgcrypt)
INCLUDE_DIRECTORIES(${LIBGCRYPT_INCLUDE_DIR})

FILE(GLOB_RECURSE SRC *.cc *.hh)
ADD_LIBRARY(${LIB_NAME} ${SRC})

TARGET_LINK_LIBRARIES(${LIB_NAME} ${LIBGCRYPT_LIBRARIES})

# To make folder in visual.
GROUP_FILES()

###Install
INSTALL(DIRECTORY "./"  
        DESTINATION "include/CryptPasswords" 
        COMPONENT headers 
        FILES_MATCHING PATTERN "*.h"
		PATTERN ".svn" EXCLUDE)

INSTALL(TARGETS ${LIB_NAME} ARCHIVE DESTINATION lib COMPONENT library)

